Update vertical padding on btn-secondary

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -146,7 +146,7 @@ h3 {
   background: #CFBAB3;
   border: none;
   margin: 4px 8px;
-  padding: 7px 4px 9px;
+  padding: 8px 4px;
   width: 33px;
   height: 34px;
   color: #3A3735;
